* Attachment button is now visible in form view only * Improved `login form` visuals (IE issues) * Improved `listview` visuals (IE issues) * Fixed `create new` record bug in M2O popup * Fixed `O2M` popup * Reimplemented `popup window open` funtion (JS)

--- a/tinyerp/static/css/style-ie.css
+++ b/tinyerp/static/css/style-ie.css
@@ -33,6 +33,10 @@ div.box2 button {
     padding: 4px;
 }
 
+.grid-cell.selector {
+    padding: 0px 4px;
+}
+
 /**
  * vim: sts=4 st=4 et 
  *
